Обновлн7ие проекта 3

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="fonts/fonts.css"/>
+    <link rel="stylesheet" href="styles/global.css"/>
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
     <header class="header" id="10">
@@ -31,14 +31,14 @@
         <a href="#0"
           ><img
             class="header__logo-image"
-            src="../images/logo-black.svg"
+            src="images/logo-black.svg"
             alt="Логотип оно тебе надо"
         /></a>
       </div>
       <!-- конец логотипа -->
       <!-- начало адреса -->
       <address class="address header__address">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br />
+        <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
         <p class="">
           наб. Принсенграхт 263-265,<br />
@@ -54,8 +54,8 @@
             <span class="cover__title-text"
               >о<span class="letter-spacing-extended">но</span></span
             >
-            <span class="cover__title-text aligned-text_center padd"
-              >те<span class="letter-spacing-extended">бе</span></span
+            <span class="cover__title-text aligned-text_center"
+              >те<span class="letter-spacing-extended">б<span class="no-letter-spacing">е</span></span></span
             >
             <span class="cover__title-text aligned-text_right"
               ><span class="letter-spacing-extended">н</span>ад<span
@@ -68,7 +68,7 @@
             <p class="cover__description-text">
               аукцион вещей, в которые никто не верил
             </p>
-            <button class="bet-button">сделать ставку</button>
+            <button class="bet-button" type="button">сделать ставку</button>
           </div>
       </section>
       <section class="lots" id="1">
@@ -81,7 +81,7 @@
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
-                <p class="card__text card__text-unic">
+                <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
@@ -130,7 +130,7 @@
         <div class="about__logo">
           <img
             class="about__logo-image"
-            src="../images/logo-white.svg"
+            src="images/logo-white.svg"
             alt="Логотип оно тебе надо"
           />
         </div>
@@ -159,7 +159,7 @@
     </main>
     <footer class="footer">
       <address class="address footer__address">
-        <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br />
+        <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
         <p class="">
           наб. Принсенграхт 263-265,<br />
@@ -179,12 +179,12 @@
           </li>
         </ul>
       </nav>
-      <section class="footer__social-list">
+      <div class="footer__social-list">
         <ul class="footer__social-list-item">
           <li class="footer__social-link">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               ><img
-                src="../images/yt.svg"
+                src="images/yt.svg"
                 class="footer__social-icon"
                 alt="Иконка ютуб"
             /></a>
@@ -192,7 +192,7 @@
           <li class="footer__social-link">
             <a href="#0"
               ><img
-                src="../images/vk.svg"
+                src="images/vk.svg"
                 class="footer__social-icon"
                 alt="Иконка Вконтаке"
             /></a>
@@ -200,13 +200,13 @@
           <li class="footer__social-link">
             <a href="#0"
               ><img
-                src="../images/pinterest.svg"
+                src="images/pinterest.svg"
                 class="footer__social-icon"
                 alt="Иконка Пинтерест"
             /></a>
           </li>
         </ul>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
