--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- начало адреса -->
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="">
           наб. Принсенграхт 263-265,<br />
           Амстердам
@@ -160,7 +160,7 @@
     <footer class="footer">
       <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="">
           наб. Принсенграхт 263-265,<br />
           Амстердам
